# scrapi

scrapi/: pyproject.toml
scrapi/apps/example/: run_http.py
scrapi/src/scrap_toolkit/: __init__.py  async_client.py  config.py  robots.py  sync_client.py
scrapi/src/scrap_toolkit/helpers/: __init__.py  auth.py  parser.py  response.py
scrapi/src/scraper_toolkit.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
