[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scraper-toolkit"
version = "0.1.0"
description = "HTTP scraping toolkit (sync/async clients, parsers, etc.)"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "requests>=2.32.0",
  "beautifulsoup4>=4.12.2",
  "lxml>=5.3.0",
  "python-dotenv>=1.0.1",
  # "httpx>=0.27.0", "feedparser>=6.0.11", "PyYAML>=6.0.1",  # 필요 시
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"